# escrituras

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html  install.sh  package-lock.json  package.json  scripture.sh  test_extraction.sh  test_references.txt  vite.config.ts
.github/workflows/: release.yml
crates/escrituras-core/: Cargo.toml
crates/escrituras-core/src/: embeddings.rs  lib.rs  mcp.rs  provider.rs  scripture.rs  state.rs
crates/escrituras-core/src/ai/: claude.rs  mod.rs  ollama.rs
crates/escrituras-tauri/: Cargo.toml  tauri.conf.json
crates/escrituras-tauri/src/: main.rs
crates/escrituras-tui/: Cargo.toml
crates/escrituras-tui/src/: app.rs  handler.rs  main.rs  tui.rs  ui.rs
data/: scripture_metadata.json
scripts/: generate_embeddings.py  install-skills.sh
skills/scriptures-compare/: SKILL.md
skills/scriptures-cross-ref/: SKILL.md
skills/scriptures-daily/: SKILL.md
skills/scriptures-journal/: SKILL.md
skills/scriptures-memorize/: SKILL.md
skills/scriptures-ponder/: SKILL.md
skills/scriptures-scripture/: SKILL.md
skills/scriptures-topical/: SKILL.md
src/: App.tsx  app.rs  config.rs  embeddings.rs  handler.rs  index.css  main.rs  ollama.rs  openai.rs  scripture.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ChatPanel.tsx  ScripturePanel.tsx
src/types/: scripture.ts
src/utils/: scriptureDb.ts
