[workspace]
resolver = "2"
members = [
    "crates/escrituras-core",
    "crates/escrituras-tauri",
    "crates/escrituras-tui",
]
default-members = ["crates/escrituras-tui"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/noahread/escrituras"
