[package]
name = "escrituras-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri desktop app for LDS scripture study"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core library
escrituras-core = { path = "../escrituras-core" }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
